--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,4 @@
 MONGO_URL = mongodb+srv://admin:halocoders@projectmern.tspjo.mongodb.net/shop?retryWrites=true&w=majority
 
 PASS_SEC = halocoderss
+JWT_SEC = halohalo
