--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "scripts": {
     "client-b": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run client-b",
+    "i-client": "cd client && npm install",
+    "heroku-postbuild": "npm run i-client && npm run client-b",
     "server": "nodemon index.js",
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
   },
